@@ -21,6 +21,7 @@ battle.select.dice=Click on your dice to select number of dice to roll
 battle.title=Battle
 cards.done=Done
 cards.fixed=Fixed Set,see Fixed Card Set rules
+cards.hint=Select 3 cards to Trade. You can trade 3 of the same design, 3 all different or any 2 cards and a Wildcard. If you have more then 5 cards then you must trade.
 cards.italianlike=Italian Rules Card Set
 cards.nexttrade=Next trade receive {0} troops
 cards.note=Select the cards you want to trade. If you own the country on more than one card and would want to receive extra troops on a specific country, place that card first in the box of cards to trade.
