@@ -3,7 +3,6 @@ Risk - Yura Mamyrin (yura@yura.net)
 TODO Android
 
     When bulding with ant, to extra jars for grasshopper are not included
-    make images for Android Market
 
     HOME SCREEN:
 	(design home screen)
@@ -16,7 +15,6 @@ TODO Android
     INGAME SCREEN:
 	in capital mode, the circles around countries look wrong, maybe draw 2 or use thicker lines
 	when placing armies, the player can only place 1 army at a time, no choice to place 1 or 5 or 10 or 25 ...
-	Text in cards dialog is not very good and does not mention "trade 3 same or 3 different cards"
         (add stats button)
 	(try semi-transparent marble for top and bottom, or add a gradient to the black)
 
