@@ -21,6 +21,7 @@ CURRENT VERSION:
 		  DONE - when map is loading, should show a loading screen
 		  DONE - attack and move screen need to take into account dpi when drawing the countries
 		  country names added to move and attack screen
+		  fixed - Text in cards dialog is not very good and does not mention "trade 3 same or 3 different cards"
 	Android 7 handle OutOfMemoryError much better when loading the map
 		  nice theme added for main menu buttons
 		  nice theme added for cards
